optimize speed of submit exam to 600ms